<resources>
    <string name="app_name">Uniactivos</string>
    <!-- my_schedule_layout -->
    <string name="my_schedule_title">My Horario</string>
    <string name="my_schedule_date">Fecha: dd/mm/aa</string>
    <string name="table_head_classroom">Aula</string>
    <string name="table_head_course">Curso</string>
    <string name="table_head_start_time">Hora\nInicio</string>
    <string name="table_head_finish_time">Hora\nFinal</string>
    <string name="table_head_check">Acción</string>
    <string name="table_head_status">Estado</string>
    <string name="btn_check">Check-In</string>
    <!-- pending_assets_layout -->
    <string name="pending_assets_title">Lista de Préstamos\nPendientes</string>
    <string name="table_head_professor">Profesor</string>
    <string name="table_head_accept">Acción</string>
    <string name="btn_accept">Entregar</string>
    <!-- receive_statics/dynamics_layouts -->
    <string name="receive_statics_title">Recibo de activos estaticos</string>
    <string name="receive_dynamics_title">Recibo de activos dinamicos</string>
    <string name="title_entrega_activos_dinamicos">Entrega de Activos Dinamicos</string>
    <string name="title_entrega_activos_estaticos">Entrega de Activos Estaticos</string>
    <string name="title_aula">Aula:</string>
    <string name="title_estado">Estado:</string>
    <string name="title_profesor">Profesor:</string>
    <string name="title_guarda">Guarda:</string>
    <string name="title_fecha">Fecha:</string>
    <string name="title_hora_inicio">Hora Inicio:</string>
    <string name="title_hora_fin">Hora Fin:</string>
    <string name="title_activos_title">Activos:</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_rechazar">Rechazar</string>
    <string name="table_head_name">Nombre</string>
    <string name="table_head_cantidad">Cantidad</string>
    <!-- receive profile_layout -->
    <string name="profile_title">Perfil de usuario</string>
    <string name="btn_cambiar_contrasena">Cambiar contraseña</string>
    <string name="subtitle_cedual">Cedula:</string>
    <string name="subtitle_nombre">Nombre:</string>
    <string name="subtitle_apellido">Apellido:</string>
    <string name="subtitle_rol">Rol:</string>
    <!--Classroom view -->
    <string name="subtitle_aula">Aula:</string>
    <string name="title_principal">Detalle de activos del aula</string>
    <string name="title_activosE">Activos Estaticos</string>
    <string name="title_activosD">Activos Dinamicos</string>
    <string name="subtitle_estado">Estado :</string>
    <!--reports view -->
    <string name="reports_coming_soon">Página de Reportes disponible proximamente</string>
    <!--Forgot pass view -->
    <string name="forgot_pass_title">¿Olvidó su Contraseña?</string>
    <string name="place_holder_email">Correo</string>
    <string name="btn_send_pass">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- GuardsReports -->
    <string name="title_reportsguarda">Lista de reportes</string>
    <string name="table_aula">Aula</string>
    <string name="table_user">Usuario</string>
    <string name="table_date">Fecha</string>
    <string name="table_estado">Estado</string>
    <!--Aula view-->
    <string name="subtitle_VerDetalle">Ver Detalle</string>
    <string name="subtitle_HoraInicio">Hora Inicio</string>
    <string name="subtitle_HoraFinal">Hora Final</string>
    <string name="btn_Detalle">Detalle</string>
    <string name="tittle_ListaAulas">Lista de Aulas por Universidad</string>
    <string name="btn_volver">Volver</string>
    <!--Change pass view-->
    <string name="uniactivos_title">UNIACTIVOS</string>
    <string name="place_holder_current_pass">Contraseña Anterior</string>
    <string name="place_holder_new_pass">Contraseña Nueva</string>
    <string name="place_holder_repeat_pass">Contraseña Nueva Otra vez</string>
    <string name="txt_btn_change_pass">Cambiar Contraseña</string>
    <string name="txt_subtitle_change_pass">Cambio de Contraseña</string>
    <string name="txt_professor">Profesor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_name">TaskApp</string>
    <string name="appTitle">MVVM Simple Sample</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>