<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PasswordChange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uniactivos_title"
            android:textSize="50sp"
            android:layout_marginTop="90sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle_change_pass"
            android:textSize="23sp"
            android:layout_marginTop="30sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000001"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:hint="@string/place_holder_current_pass"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:drawableRight="@drawable/baseline_lock_24"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:hint="@string/place_holder_new_pass"
            android:inputType="textPassword"
            android:padding="10sp"
            android:drawableRight="@drawable/baseline_lock_24"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:hint="@string/place_holder_repeat_pass"
            android:inputType="textPassword"
            android:padding="10sp"
            android:drawableRight="@drawable/baseline_lock_24"
            />

        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:backgroundTint="@color/blue"
            android:padding="10sp"
            android:text="@string/txt_btn_change_pass"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>