<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".fragments.TeacherStaticForm"
    tools:visibility="visible">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:layout_gravity="top|center"
        android:text="@string/title_entrega_activos_estaticos"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130sp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_aula"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"
                android:layout_marginStart="4sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="C-18"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120sp"
                android:text="@string/title_estado"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="Disponible"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="25sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profesor"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="Marvin"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60sp"
                android:text="@string/title_guarda"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="Juan"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="25sp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hora_inicio"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="45sp"
                android:text="11:00"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:text="@string/title_hora_fin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="11:00"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_fecha"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/text_border"
                android:padding="2sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:text="23/04/12"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/title_activos_title"
                android:textColor="@color/blue"
                android:textSize="30sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TableLayout
                    android:id="@+id/tableLayout_activos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:padding="16dp"
                    tools:ignore="UselessParent,VisualLintBounds">

                    <TableRow android:background="@color/black" >
                        <TextView
                            android:text="@string/table_head_name"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_column="1"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/table_head_cantidad"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_column="2"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:background="@color/gray_blue">
                        <TextView
                            android:text="Dato 1"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"  />
                        <TextView
                            android:text="Dato 2"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_column="2"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"  />
                    </TableRow>

                </TableLayout>
            </HorizontalScrollView>
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_aceptar"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>