<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UNIACTIVOS"
            android:textSize="50sp"
            android:layout_marginTop="100sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_title"
            android:textSize="26sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000001"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="70sp"
            android:layout_marginRight="20sp"
            android:hint="@string/place_holder_email"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:drawableRight="@drawable/baseline_mail_24"
            />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="60sp"
            android:layout_marginRight="20sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue"
            android:padding="10sp"
            android:text="@string/btn_send_pass"
            android:textColor="#ffffff" />
    </LinearLayout>

</FrameLayout>