<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible"
    android:orientation="vertical"
    tools:context=".view.fragments.MySchedule">

    <TextView
        android:id="@+id/title_my_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_gravity="top|center"
        android:text="@string/my_schedule_title"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40sp"
            android:background="@drawable/text_border"
            android:text="@string/my_schedule_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="5sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvschedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>