<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardReports">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_gravity="center|top"
        android:text="@string/title_reportsguarda"
        android:textColor="@color/blue"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140sp"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:orientation="vertical">


        <TableLayout
            android:id="@+id/tableLayout_activos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:padding="16dp">

            <TableRow android:background="@color/black" >
                <TextView
                    android:text="@string/table_aula"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/table_user"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/table_date"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/table_estado"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:background="@color/gray_blue">
                <TextView
                    android:text="Dato 1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  />
                <TextView
                    android:text="Dato 2"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  />
                <TextView
                    android:text="Dato 1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  />
                <TextView
                    android:text="Dato 2"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</FrameLayout>