<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.Aulas">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_pending_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_gravity="top|center"
        android:gravity="center"
        android:text="@string/tittle_ListaAulas"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvClassrooms"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TableLayout
                android:id="@+id/tableLayout_pending_assets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stretchColumns="*"
                android:visibility="invisible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="5dp"
                        android:text="@string/table_head_classroom"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:padding="5dp"
                        android:text="@string/subtitle_HoraFinal"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:padding="5dp"
                        android:text="@string/subtitle_HoraFinal"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="6"
                        android:padding="5dp"
                        android:text="@string/subtitle_VerDetalle"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:background="@color/gray_blue"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="5dp"
                        android:text="Dato 1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:padding="5dp"
                        android:text="Dato 2"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:padding="5dp"
                        android:text="Dato 3"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <Button
                        android:id="@+id/btn_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="6"
                        android:padding="5dp"
                        android:text="@string/btn_Detalle"
                        android:textStyle="bold" />
                    <!--android:onClick="openDialog"-->
                </TableRow>

            </TableLayout>


        </HorizontalScrollView>

    </LinearLayout>

</FrameLayout>